# cppTesting

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  cpptesting.m.cpp  my_class_1.cpp  my_class_1.h  my_class_2.cpp  my_class_2.h  my_new_dummy_class.cpp  my_new_dummy_class.h
tests/: CMakeLists.txt  mock_my_classes.h  my_class_1_unit.t.cpp  my_class_2_unit.t.cpp  my_new_dummy_class_mock.t.cpp
